* New features and stability improvement